--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,49 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Project specific
-config.json
-*.exe
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
 *.log
+*.bak
+*.old
+
+# Test files (if you want to exclude them)
+test_*.py
+*_test.py
+
+# Configuration files with sensitive data
+config.ini
+settings.ini
+secrets.json
+
+# Build output directories
+build/
+dist/
+*.exe
+*.app
+*.dmg
+
+# FFmpeg binaries (if you want to exclude them from git)
+# Uncomment the next line if you don't want to include ffmpeg.exe in the repository
+# ffmpeg.exe
+# ffprobe.exe
+
+# Project specific
+# Add any project-specific files or directories to ignore here
